lib/doctavious-cli/src/cmd/design_decisions/snapshots/doctavious_cli__cmd__design_decisions__adr__tests__init_should_create_adr_directory_and_add_first_adr.snap
---
source: lib/doctavious-cli/src/cmd/design_decisions/adr.rs
expression: content
---
---
authors: 
date: [DATE]
discussion: 
---

# 1. Record architecture decisions

Date: [DATE]

## Status

Accepted

## Context

We need to record the architectural decisions made on this project.

## Decision

We will use Architecture Decision Records, as [described by Michael Nygard](http://thinkrelevance.com/blog/2011/11/15/documenting-architecture-decisions).

## Consequences

See Michael Nygard's article, linked above. For a lightweight ADR toolset, see Nat Pryce's [adr-tools](https://github.com/npryce/adr-tools).
