lib/doctavious-cli/src/cmd/design_decisions/snapshots/doctavious_cli__cmd__design_decisions__adr__tests__should_allow_custom_project_template.snap
---
source: lib/doctavious-cli/src/cmd/design_decisions/adr.rs
expression: "fs::read_to_string(custom_template).unwrap()"
---
# TITLE

Project specific template!

# Status

STATUS

# Info

ADR Number: 2

Date: [DATE]
