lib/doctavious-cli/src/cmd/design_decisions/snapshots/doctavious_cli__cmd__design_decisions__adr__tests__should_generate_toc_with_header_footer.snap
---
source: lib/doctavious-cli/src/cmd/design_decisions/adr.rs
expression: toc
---
# Architecture Decision Records

An intro.

Multiple paragraphs.

* [`1. The First Decision`](/[DIR]/docs/adr/0001-the-first-decision.md)
* [`2. The Second Decision`](/[DIR]/docs/adr/0002-the-second-decision.md)

An outro.
